# DiscoFlix

./: . gitignore  .dockerignore  .gitignore  DiscoFlix.py  Dockerfile  LICENSE  README.md  app.py  auto_install_update.sh  bot.py  discodb.db  discord_bot.py  docker-compose.yml  logging.js  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  radarr_api_v3.py  request_api.py  requirements.txt  run.cmd  run.sh  sonarr_api.py  source.js  telegram_bot.py
.github/workflows/: docker-deploy.yml  feed.yml  test.yml
.postman/: api  api_b1a5e893-e31b-4f71-aeba-f59056f4e23f
DiscoFlix/: asgi.py  settings.py  urls.py  wsgi.py
DiscoFlixBot/: base_command.py  bot.py  controller.py  events.py  parser.py  registry.py
DiscoFlixBot/commands/: add_admin.py  add_user.py  delete_user.py  echo.py  error.py  help.py  log.py  mentioned.py  reject.py  request_movie.py  request_show.py  test.py
DiscoFlixBot/managers/: permission_manager.py  request_manager.py  ui_manager.py
DiscoFlixClient/: admin.py  apps.py  consumers.py  middleware_custom.py  middleware_login.py  models.py  permissions.py  routing.py  serializers.py  urls.py  utils.py  views.py
DiscoFlixClient/consumers/: __init__.py  client.py
DiscoFlixClient/migrations/: 0001_initial.py  0002_alter_user_added.py  0002_alter_user_discord_servers_alter_user_requests.py  0002_configuration_is_tagging_enabled_and_more.py  0003_alter_user_added.py  (+7 more)
data/: statemachine.json  values.json
deployment/: auto_deploy.sh
prisma/: schema.prisma
src/: app.py
static/: source.js
templates/: index.html  layout.html
(+254 files in other folders)
